Archive/e2bf8dd3e1adf1981a9a9c7b0a65b5be-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:6:2: error: expected primary-expression before 'int'
 {int i,j
  ^
main.cpp:6:2: error: expected '}' before 'int'
main.cpp:6:2: error: expected ',' or ';' before 'int'
main.cpp:8:1: error: expected unqualified-id before 'for'
 for(i, <11, i++)
 ^
main.cpp:13:1: error: 'cout' in namespace 'std' does not name a type
 std::cout<<array [6];
 ^
main.cpp:14:1: error: expected declaration before '}' token
 }
 ^
